--- a/templates/index.html
+++ b/templates/index.html
@@ -779,7 +779,7 @@
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
-            <h3>Call Me</h3>
+            <h3>Call 22 Me</h3>
             <p>+1 5589 55488 55</p>
           </div>
         </div>
