--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1188,3 +1188,112 @@ section .container {
 .credits a:hover {
   color: #fff;
 }
+
+
+.face,
+.eyes {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+body {
+	margin: auto;
+	background-color: #111;
+	width: 100%;
+	height: 100vh;
+}
+
+.face {
+	position: relative;
+	background-color: #fc0;
+	width: 150px;
+	height: 150px;
+	border-radius: 100%;
+}
+
+.face::before {
+	content: '';
+	position: absolute;
+	background-color: #b70;
+	width: 75px;
+	height: 35px;
+	top: 90px;
+	border-bottom-left-radius: 100px;
+	border-bottom-right-radius: 100px;
+	transition: 0.4s ease;
+}
+
+.face:hover::before {
+	width: 35px;
+	height: 35px;
+	top: 95px;
+	border-radius: 100px;
+}
+
+.eyes {
+	position: relative;
+	top: -20px;
+}
+
+.eye {
+	position: relative;
+	background-color: #fff;
+	width: 40px;
+	height: 40px;
+	border-radius: 100%;
+	margin: 0 7.5px;
+}
+
+.eye::before {
+	content: '';
+	background-color: #222;
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	border-radius: 100%;
+	top: 50%;
+	left: 12.5px;
+	transform: translate(-50%, -50%);
+}
+
+
+.download-btn {
+    position: relative;
+    right: 900px;
+    top: 200px;
+    display: inline-block;
+    color: #18d26e;
+    text-decoration: none;
+    padding: 10px 20px;
+    border: 2px solid #18d26e;
+    border-radius: 4px;
+    transition: color 0.3s ease-in-out;
+}
+
+.download-btn i {
+    margin-left: 8px;
+}
+
+.download-btn:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: -4px;
+    left: 0;
+    background-color: #18d26e;
+    visibility: hidden;
+    transition: all 0.3s ease-in-out;
+}
+
+.download-btn:hover {
+    color: #fff;
+    background-color: #18d26e;
+}
+
+.download-btn:hover:before {
+    visibility: visible;
+    width: 100%;
+}
+
