--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
+  <title>Ajincosta</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
  <!-- Favicons -->
- <link href="{{ url_for('static', filename='assets/img/favicon.png') }}" rel="icon">
+ <link href="{{ url_for('static', filename='assets/img/hero.ico') }}" rel="icon">
  <link href="{{ url_for('static', filename='assets/img/apple-touch-icon.png') }}" rel="apple-touch-icon">
 
  <!-- Google Fonts -->
