--- a/templates/index.html
+++ b/templates/index.html
@@ -81,9 +81,7 @@
     </div>
 
 
-    <a href="/static/jebin.pdf"class="download-btn" target="next_page">Download Cv
-      <i class="fa fa-download"></i>
-    </a>
+  
 
    
  
@@ -530,6 +528,10 @@
                    managing medicines through API endpoints, and a sophisticated search functionality to streamline access and management of medical data.</li>
             </ul>
             </p>
+            <a href="/static/jebin.pdf"class="download-btn" target="next_page">Download Cv
+<i class="fa fa-download"></i>    
+</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://www.buymeacoffee.com/ajincosta" class="download-btn" target="_blank">buy Me a Coffee</a>
           </div>
         </div>
       </div>
@@ -615,7 +617,7 @@
 
     </div>
 </section>
-><!-- End Services Section -->
+<!-- End Services Section -->
 
   <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
@@ -915,11 +917,7 @@
   </section><!-- End Contact Section -->
 
   <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://www.linkedin.com/in/jebincr7/">Ajincosta</a>
+   Designed by <a href="https://www.linkedin.com/in/jebincr7/">Ajincosta</a>
   </div>
 
   <script src="{{ url_for('static', filename='assets/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
