--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,9 @@
           <li><a class="nav-link" href="#services">Services</a></li>
           <li><a class="nav-link" href="#portfolio">Projects</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
+          <li><a href="/static/jebin.pdf"class="nav-link" target="next_page">Download cv   
+            </a></li>
+            <li><a href="https://www.buymeacoffee.com/ajincosta" class="nav-link" target="_blank">buy Me a Coffee</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -79,6 +82,9 @@
       </div>
 
     </div>
+
+   
+
 
 
   
@@ -130,10 +136,6 @@
             I have a strong foundation in both front-end and back-end development, with proficiency in Python, JavaScript, HTML, CSS, and frameworks like Django and React. My internship at Mashupstack
              has provided me with hands-on experience in building and optimizing web applications, working in a collaborative environment, and solving real-world problems.
           </p>
-          <a href="/static/jebin.pdf"class="download-btn" target="next_page">Download Cv
-            <i class="fa fa-download"></i>    
-            </a>
-            <a href="https://www.buymeacoffee.com/ajincosta" class="download-btn" target="_blank">buy Me a Coffee</a>
         </div>
       </div>
 
