--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ajincosta</title>
+  <title>Ajin</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -53,7 +53,7 @@
       </div>
   
 
-      <h1><a href="index.html">Jebin.c</a></h1>
+      <h1><a href="index.html">Ajin.c</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a <span>Fullstack Developer</span> from kanyakumari.</h2>
@@ -66,7 +66,7 @@
           <li><a class="nav-link" href="#services">Services</a></li>
           <li><a class="nav-link" href="#portfolio">Projects</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
-          <li><a href="/static/jebin.pdf"class="nav-link" target="next_page">Download cv   
+          <li><a href="/static/ajin.pdf"class="nav-link" target="next_page">Download cv   
             </a></li>
             <li><a href="https://www.buymeacoffee.com/ajincosta" class="nav-link" target="_blank">buy Me a Coffee</a></li>
         </ul>
@@ -77,7 +77,7 @@
         <a href="https://x.com/2kGamin43176275" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="https://www.facebook.com/ajincosta.ajincosta.1" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/ajin_cr7__/" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/jebincr7" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/ajincr77" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/ajin597" class="github"><i class="bi bi-github"></i></a>
       </div>
 
@@ -111,13 +111,13 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Fullstack web &amp; Developer</h3>
           <p class="fst-italic">
-            Hello! My name is Jebin, and I hail from Kanyakumari. I hold a B.Sc. degree in Computer Science and am currently gaining practical experience as an intern at Mashupstack.
+            Hello! My name is Ajin, and I hail from Kanyakumari. I hold a B.Sc. degree in Computer Science and am currently gaining practical experience as an intern at Mashupstack.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 Aug 2003</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://port-jm4j.onrender.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://react-port-tau.vercel.app/</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9486588127</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>kanyakumari, india</span></li>
               </ul>
@@ -126,7 +126,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>bachelor's</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>cjebin9@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>ajincc88@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
@@ -453,14 +453,14 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
-            <h4>Jebin c</h4>
+            <h4>Ajin c</h4>
             <p><em>Computer Science graduate with practical experience as an intern at Mashupstack, specializing in Python-based full-stack development. Skilled in Python, Django, for backend development, as well as React, HTML, CSS (including Bootstrap and Tailwind CSS) for frontend design. Proficient in database management using MySQL and adept at version control with Git. Passionate about creating scalable web applications and leveraging academic knowledge and internship experience to contribute effectively to innovative projects.
                Committed to delivering high-quality solutions and driving positive outcomes in the dynamic field of computer science</em></p>
             <p>
             <ul>
-              <li>Kollencode,kanyakumari</li>
+              <li>Thiruvanathapuram,kerala</li>
               <li>(+91) 9486588127</li>
-              <li>cjebin9@gmail.com</li>
+              <li>ajincc88@gmail.com</li>
             </ul>
             </p>
           </div>
@@ -855,7 +855,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>valiya villagam vallavilai, Kollencode, (po) 629160</p>
+            <p>192.168.l.1</p>
           </div>
         </div>
 
@@ -877,7 +877,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>cjebin9@gmail.com</p>
+            <p>ajincc88@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
@@ -919,7 +919,7 @@
   </section><!-- End Contact Section -->
 
   <div class="credits">
-   Designed by <a href="https://www.linkedin.com/in/jebincr7/">Ajincosta</a>
+   Designed by <a href="https://www.linkedin.com/in/jebincr7/">Ajin</a>
   </div>
 
   <script src="{{ url_for('static', filename='assets/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
