Your descriptive commit message

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ajin</title>
+  <title>Jebin c</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -53,7 +53,7 @@
       </div>
   
 
-      <h1><a href="index.html">Ajin.c</a></h1>
+      <h1><a href="index.html">Jebin c</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a <span>Fullstack Developer</span> from kanyakumari.</h2>
@@ -111,7 +111,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Fullstack web &amp; Developer</h3>
           <p class="fst-italic">
-            Hello! My name is Ajin, and I hail from Kanyakumari. I hold a B.Sc. degree in Computer Science and am currently gaining practical experience as an intern at Mashupstack.
+            Hello! My name is Jebin, and I hail from Kanyakumari. I hold a B.Sc. degree in Computer Science and am currently gaining practical experience as an intern at Mashupstack.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -453,13 +453,13 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
-            <h4>Ajin c</h4>
+            <h4>Jebin c</h4>
             <p><em>Computer Science graduate with practical experience as an intern at Mashupstack, specializing in Python-based full-stack development. Skilled in Python, Django, for backend development, as well as React, HTML, CSS (including Bootstrap and Tailwind CSS) for frontend design. Proficient in database management using MySQL and adept at version control with Git. Passionate about creating scalable web applications and leveraging academic knowledge and internship experience to contribute effectively to innovative projects.
                Committed to delivering high-quality solutions and driving positive outcomes in the dynamic field of computer science</em></p>
             <p>
             <ul>
               <li>Thiruvanathapuram,kerala</li>
-              <li>(+91) 9486588127</li>
+              <li>(+91) 8610796218</li>
               <li>ajincc88@gmail.com</li>
             </ul>
             </p>
@@ -884,7 +884,7 @@
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+91 9486588127</p>
+            <p>+91 8610796218</p>
           </div>
         </div>
       </div>
