--- a/templates/index.html
+++ b/templates/index.html
@@ -747,8 +747,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Portfolio Item 6 -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                 <div class="portfolio-wrap">
                     <img src="{{ url_for('static', filename='assets/img/portfolio/portfolio-6.jpg') }}"
@@ -769,6 +767,47 @@
                     </div>
                 </div>
             </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                <div class="portfolio-wrap">
+                    <img src="{{ url_for('static', filename='assets/img/portfolio/word1.png') }}"
+                        class="img-fluid" alt="Portfolio 4">
+                    <div class="portfolio-info">
+                        <h4>Business Website Prototype - Wordpress</h4>
+                        <p> This is a responsive sample company website I developed using WordPress to demonstrate my front-end web development and design skills. I used the Astra theme for its lightweight performance and clean design, along with Elementor for easy drag-and-drop page building</p>
+                        <div class="portfolio-links">
+                          <a href="https://github.com/ajin597/wordpress/tree/master" 
+                               
+                          class="bi bi-github" target="next_page"></i></a>
+                            <a href="{{ url_for('portfolio_details', id=4) }}"
+                                data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                                class="portfolio-details-lightbox" title="Portfolio Details"><i
+                                    class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                <div class="portfolio-wrap">
+                    <img src="{{ url_for('static', filename='assets/img/portfolio/word2.png') }}"
+                        class="img-fluid" alt="Portfolio 4">
+                    <div class="portfolio-info">
+                        <h4>sample website - Wordpress</h4>
+                        <p> this is a sample business website built using WordPress, designed to showcase modern UI/UX design using popular tools like the Astra theme and Elementor page builder. It includes sections like home, about, services, testimonials, and contact — all fully responsive and customizable</p>
+                        <div class="portfolio-links">
+                          <a href="https://github.com/ajin597/wordpress2" 
+                               
+                          class="bi bi-github" target="next_page"></i></a>
+                            <a href="{{ url_for('portfolio_details', id=4) }}"
+                                data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                                class="portfolio-details-lightbox" title="Portfolio Details"><i
+                                    class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        
 
         
             <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
