--- a/templates/index.html
+++ b/templates/index.html
@@ -655,10 +655,10 @@
                           <a href="https://github.com/ajin597" 
                                
                           class="bi bi-github" target="next_page"></i></a>
-                            <a href="{{ url_for('portfolio_details', id=1) }}"
-                                data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
-                                class="portfolio-details-lightbox" title="Portfolio Details"><i
-                                    class="bx bx-link"></i></a>
+                            <a href="https://superlative-fairy-05a5e3.netlify.app/" target="_blank" title="Portfolio Website">
+   <i class="bx bx-link"></i>
+</a>
+
                         </div>
                     </div>
                 </div>
@@ -676,10 +676,8 @@
                           <a href="https://github.com/ajin597" 
                                
                           class="bi bi-github" target="next_page"></i></a>
-                            <a href="{{ url_for('portfolio_details', id=2) }}"
-                                data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
-                                class="portfolio-details-lightbox" title="Portfolio Details"><i
-                                    class="bx bx-link"></i></a>
+                            <a href="https://ajin597.github.io/calculator/" target="_blank" title="Portfolio Website">
+   <i class="bx bx-link"></i>
                         </div>
                     </div>
                 </div>
