--- a/templates/index.html
+++ b/templates/index.html
@@ -902,7 +902,7 @@
               <a href="https://x.com/2kGamin43176275" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="https://www.facebook.com/ajincosta.ajincosta.1" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/ajin_cr7__/" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/jebincr7" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/ajincr7/" class="linkedin"><i class="bi bi-linkedin"></i></a>
               <a href="https://github.com/ajin597" class="github"><i class="bi bi-github"></i></a>
             </div>
           </div>
